overflow issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -162,7 +162,7 @@ header {
 		.scroll {
 			width: Calc(100% + 20px);
 			height: 100%;
-			overflow: scroll;
+			overflow-y: scroll;
 			@include small-screen {
 				overflow: hidden;
 			}
